--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "lucide-react": "^0.368.0",
     "next": "14.2.0",
     "react": "^18",
     "react-dom": "^18"
