--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "lucide-react": "^0.368.0",
     "next": "14.2.0",
     "react": "^18",
