--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next-auth": "^5.0.0-beta.18",
     "react": "^18",
     "react-dom": "^18",
+    "server-only": "^0.0.1",
     "tailwind-merge": "^2.2.2"
   },
   "devDependencies": {
