--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint .",
+    "lint": "eslint . --max-warnings=0",
     "lint:fix": "eslint . --fix --max-warnings=0",
+    "format": "prettier --check .",
+    "format:write": "prettier --write .",
     "test": "jest",
     "test:watch": "jest --watch"
   },
@@ -34,6 +36,7 @@
     "@typescript-eslint/eslint-plugin": "^7.6.0",
     "@typescript-eslint/parser": "^7.6.0",
     "eslint": "^8",
+    "eslint-config-next": "^14.2.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jest-dom": "^5.2.0",
     "eslint-plugin-jsx-a11y": "^6.8.0",
@@ -44,9 +47,14 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
+    "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.13",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.1.2",
     "typescript": "^5"
-  }
+  },
+  "cacheDirectories": [
+    "node_modules",
+    ".next/cache"
+  ]
 }
