--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@auth/prisma-adapter": "^2.1.0",
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "lucide-react": "^0.368.0",
     "next": "14.2.0",
