--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next-auth": "^5.0.0-beta.18",
     "react": "^18",
     "react-dom": "^18",
+    "react-select": "^5.8.0",
     "server-only": "^0.0.1",
     "sharp": "^0.33.3",
     "tailwind-merge": "^2.2.2"
