--- a/package.json
+++ b/package.json
@@ -17,17 +17,22 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.1.0",
+    "@hookform/resolvers": "^3.4.0",
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "lucide-react": "^0.368.0",
     "next": "14.2.0",
     "next-auth": "^5.0.0-beta.18",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.4",
+    "react-select": "^5.8.0",
     "server-only": "^0.0.1",
     "sharp": "^0.33.3",
-    "tailwind-merge": "^2.2.2"
+    "tailwind-merge": "^2.2.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.2",
